# cloud-metric-export

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  compose.example.yml
.devcontainer/: devcontainer.json
.github/workflows/: build-docker.yml
src/: api_client.rs  aws_client.rs  config.rs  main.rs  metrics.rs  server.rs
